--- a/branches/composer.json
+++ b/branches/composer.json
@@ -17,7 +17,8 @@
         "latrell/alipay": "dev-master",
         "maatwebsite/excel": "2.1.0",
         "spatie/laravel-pjax": "^1.3",
-        "zgldh/qiniu-laravel-storage": "^0.8.0"
+        "zgldh/qiniu-laravel-storage": "^0.8.0",
+        "overtrue/laravel-wechat": "3.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
